@@ -1,3 +1,7 @@
+2004-03-08  Roger Sayle  <roger@eyesopen.com>
+
+	* gcc.c-torture/execute/20040307-1.c: New test case.
+
 2004-03-08  Eric Botcazou  <ebotcazou@act-europe.fr>
 
 	* gcc.c-torture/execute/20040308-1.c: New test.
