@@ -1,3 +1,8 @@
+2004-03-08  Roger Sayle  <roger@eyesopen.com>
+
+	* fold-const.c (fold) <EQ_EXPR>: Rewrite optimization to transform
+	"foo++ == const" into "++foo == const+incr".
+
 2004-03-08  Ulrich Weigand  <uweigand@de.ibm.com>
 
 	* config/s390/s390.md ("*extendqidi2_short_displ"): Add CC clobber.
